# project-Doze

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  HANDOFF.md  HF_ADAPTER_PUBLISH_HANDOFF.md  MERGE_NOTES.md  Makefile  OLLAMA_ADAPTER_PUBLISH_HANDOFF.md  PRODUCTION_AUDIT_2026-05-12.md  README.md  TRADING_EVALS_HANDOFF.md  TRADING_TRACK_ID_PIPELINE_HANDOFF.md  docker-compose.override.example.yml  docker-compose.yml  requirements.txt
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/src/: app.py  main.py
apps/api/src/agents/: eval_backend.py  evolution_graph.py  forge_agent.py  runner.py  training_backend.py
apps/api/src/api/: router.py
apps/api/src/config/: database.py  redis_pool.py  settings.py  trading_eval_weights.py
apps/api/src/middleware/: errors.py  logging.py
apps/api/src/scripts/: eval_worker.py  mutate_worker.py  train_worker.py
apps/api/src/services/: ablation_presets.py  adapter_serve.py  automation.py  campaign_configs.py  campaign_runner.py  campaign_slack.py  data_curator.py  event_bus.py  experiment_tracker.py  lineage_db.py  mock_data.py  model_ensure.py  model_registry.py  n8n_webhook.py  ollama_client.py  pareto_selector.py  peft_inference.py  regression_detector.py  run_events.py  slack_blocks.py  slack_blocks_campaign.py  slack_blocks_health.py  track_seed.py
apps/api/src/utils/: embeddings.py  gpu.py  hf_model_id.py  (+3 more)
apps/api/tests/: conftest.py  test_auth_middleware.py  test_build_trading_action.py  test_campaign_runner.py  test_campaigns.py  test_champion_route.py  test_crossover.py  test_crossover_ties_dare.py  test_engine_cron_dow.py  test_eval_harness_version.py  test_eval_helpers_real.py  test_eval_runner_fix.py  test_eval_stderrs.py  test_evolution_graph.py  test_evolution_memory_estimate.py  test_evolution_ram_precheck.py  test_first_gen_min_score_gate.py  test_harness_version_flow.py  test_lineage_db.py  test_lineage_tree_route.py  test_lora_targets.py  test_memory_estimator.py  test_models_validate.py  test_publish_adapter_to_hf.py  test_publish_adapter_to_ollama.py  test_settings.py  test_track_id_pipeline.py  test_trading_evals.py  test_training_backend_curated.py  test_workflows_schema.py
(+220 files in other folders)
