[project]
name = "modelforge"
version = "0.1.0"
description = "ModelForge — Self-Evolving LLM Platform (autonomous model evolution engine)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "ModelForge" }]
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "asyncpg==0.30.0",
  "httpx==0.28.1",
  "python-dotenv==1.0.1",
  "redis==5.2.1",
  "langgraph==0.2.62",
  "langchain-core==0.3.28",
  "structlog==24.4.0",
  "pgvector==0.3.6",
  "filelock==3.16.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
  "mypy==1.13.0",
]
gpu = [
  # Imported lazily by src/agents/*_backend.py — only install on DGX Spark.
  "torch==2.5.1",
  "transformers==4.47.0",
  "peft==0.14.0",
  "trl==0.13.0",
  "lm-eval==0.4.4",
  "sentence-transformers==3.3.1",
  "wandb==0.19.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ── Tooling ───────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # pyflakes / pycodestyle
  "I",            # import sorting
  "B",            # bugbear
  "UP",           # pyupgrade
  "RUF",          # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
# `Depends(...)` is FastAPI's required idiom for dep injection.
"src/api/routes/**" = ["B008"]
"src/api/deps.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic.*",
]
